--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,12 +3,7 @@ name: Deploy Flutter Web to GitHub Pages
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  workflow_dispatch:   # Allows manual trigger from GitHub
 
 jobs:
   build-and-deploy:
@@ -18,26 +13,16 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
-          channel: 'stable'
+          channel: stable
 
-      - name: Enable web
-        run: flutter config --enable-web
-
-      - name: Get packages
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: Build web
-        run: flutter build web --release --base-href "/${{ github.event.repository.name }}/" 
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: build/web
+      - name: Build Flutter Web
+        run: flutter build web --release --base-href "/"
 
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: bluefireteam/flutter-gh-pages@v7
+        with:
+          baseHref: "/"          
+          webRenderer: canvaskit 
