--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,13 @@ dependencies:
     sdk: flutter
 
   # Navigation
-  go_router: ^13.2.0
+  go_router: ^17.1.0
 
   # State Management — Riverpod chosen for compile-safe providers,
   # excellent async support (FutureProvider for GitHub API), and
   # fine-grained rebuilds that keep 60fps on animation-heavy screens.
-  flutter_riverpod: ^2.5.1
-  riverpod_annotation: ^2.3.4
+  flutter_riverpod: ^3.1.0
+  riverpod_annotation: ^4.0.0
 
   # Animations
   flutter_animate: ^4.5.0
@@ -28,14 +28,14 @@ dependencies:
   dio: ^5.4.3
 
   # UI helpers
-  google_fonts: ^6.2.1
+  google_fonts: ^8.0.2
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
   url_launcher: ^6.2.5
   font_awesome_flutter: ^10.7.0
   flutter_svg: ^2.0.10+1
   visibility_detector: ^0.4.0+2
-  share_plus: ^9.0.0
+  share_plus: ^12.0.1
 
   # Utils
   flutter_web_plugins:
@@ -45,8 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
-  riverpod_generator: ^2.3.9
+  flutter_lints: ^6.0.0
+  riverpod_generator: ^4.0.0+1
   build_runner: ^2.4.8
   mockito: ^5.4.4
   build_verify: ^3.1.0
