--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,7 +24,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Flutter Web
-        run: flutter build web --release --base-href "/" 
+        run: flutter build web --release --wasm --base-href "/"
 
       - name: Deploy to GitHub Pages
         uses: bluefireteam/flutter-gh-pages@v7
